# firecracker-tradekit

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  _main.py  agent.py  builder.py  change.sh  controller.py  main.py  pyproject.toml  readme.Md  run.sh  test_run.py  worker.py
historical_data/: ADANIENT_macro.csv  ADANIENT_meso.csv  ADANIENT_micro.csv  ADANIPORTS_macro.csv  ADANIPORTS_meso.csv  ADANIPORTS_micro.csv  APOLLOHOSP_macro.csv  APOLLOHOSP_meso.csv  APOLLOHOSP_micro.csv  ASIANPAINT_macro.csv  ASIANPAINT_meso.csv  ASIANPAINT_micro.csv  AXISBANK_macro.csv  AXISBANK_meso.csv  AXISBANK_micro.csv  BAJAJ-AUTO_macro.csv  BAJAJ-AUTO_meso.csv  BAJAJ-AUTO_micro.csv  BAJAJFINSV_macro.csv  BAJAJFINSV_meso.csv  BAJAJFINSV_micro.csv  BAJFINANCE_macro.csv  BAJFINANCE_meso.csv  BAJFINANCE_micro.csv  BEL_macro.csv  BEL_meso.csv  BEL_micro.csv  BHARTIARTL_macro.csv  BHARTIARTL_meso.csv  BHARTIARTL_micro.csv  CIPLA_macro.csv  CIPLA_meso.csv  CIPLA_micro.csv  COALINDIA_macro.csv  COALINDIA_meso.csv  COALINDIA_micro.csv  DRREDDY_macro.csv  DRREDDY_meso.csv  DRREDDY_micro.csv  EICHERMOT_macro.csv  (+104 more)
src/: backtest_engine.rs  indicators.rs  lib.rs
src/indicators/: ewm.rs  sma_method.rs
