[package]
name = "tradekit_rust"
version = "0.1.0"
edition = "2024"

[lib]
name = "tradekit_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19", features = ["extension-module"] }
numpy = "0.19.0"
ndarray = "0.15.0"
glob = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
